[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://SFX/level_1_paused.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 0.698039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 296.0
margin_top = 16.0
margin_right = 685.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="NewGame" type="Button" parent="."]
margin_left = 336.0
margin_top = 224.0
margin_right = 647.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 2 )
text = "Restart Entirely"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="."]
margin_left = 336.0
margin_top = 328.0
margin_right = 647.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 2 )
text = "Load Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="."]
margin_left = 336.0
margin_top = 424.0
margin_right = 647.0
margin_bottom = 497.0
custom_fonts/font = SubResource( 2 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 336.0
margin_top = 136.0
margin_right = 647.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_ExitGame_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
